# freelm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  js-ci.yml  npm-release.yml  release.yml
examples/: basic.py  e2e_smoke.py
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/examples/: e2e.mjs
js/src/: backoff.ts  breaker.ts  cache.ts  cli.ts  client.ts  config.ts  discovery.ts  engine.ts  errors.ts  index.ts  keys.ts  ratelimit.ts  registry.ts  state.ts  strategy.ts  time.ts  types.ts  version.ts
js/src/compat/: openai.ts
js/src/providers/: base.ts  cerebras.ts  google.ts  groq.ts  index.ts  mistral.ts  nim.ts  openrouter.ts
js/test/: cli.test.ts  compat.test.ts  discovery.test.ts  providers.test.ts  router.test.ts  state.test.ts  streaming.test.ts  units.test.ts
src/freelm/: __init__.py  __main__.py  _backoff.py  _breaker.py  _cache.py  _cli.py  _engine.py  _keys.py  _ratelimit.py  _state.py  _types.py  _version.py  client.py  config.py  discovery.py  errors.py  registry.py  strategy.py  types_compat.py
src/freelm/compat/: __init__.py  openai.py
src/freelm/providers/: __init__.py  base.py  cerebras.py  google.py  groq.py  mistral.py  nim.py  openrouter.py
tests/: conftest.py  test_async.py  test_cli.py  test_compat.py  test_discovery.py  test_providers_extra.py  test_router.py  test_state.py  test_streaming.py  test_units.py
