[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freelm"
version = "0.1.0"
description = "One always-up LLM client over free-tier providers (OpenRouter, Google AI Studio, NVIDIA NIM) with auto key-rotation, failover, circuit breaking and quota-aware routing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Shihab Shahriar Antor", email = "shahriarlabs@gmail.com" }]
keywords = ["llm", "openrouter", "gemini", "nvidia-nim", "free", "failover", "router", "openai", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "respx>=0.20", "anyio>=4"]

[project.urls]
Homepage = "https://github.com/shihabshahrier/freelm"
Issues = "https://github.com/shihabshahrier/freelm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/freelm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
